--- a/eval/model-selection/validation_curve.ipynb
+++ b/eval/model-selection/validation_curve.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "source": [
     "# 検証曲線\n",
-    "```{hint}\n",
     "[sklearn.model_selection.validation_curve](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.validation_curve.html)\n",
-    "```\n",
     "モデルの訓練データへの適合度と検証用データへの予測性能を同時に比較するための便利機能。"
    ]
   },
@@ -50,9 +48,7 @@
     "plt.rc(\"ytick\", labelsize=14)\n",
     "\n",
     "# youtube動画を表示\n",
-    "import IPython.display\n",
-    "\n",
-    "# IPython.display.YouTubeVideo(\"XXX\", width=\"500px\")"
+    "import IPython.display"
    ]
   },
   {
