--- a/eval/regression/correlation_coefficient.ipynb
+++ b/eval/regression/correlation_coefficient.ipynb
@@ -94,10 +94,7 @@
    "metadata": {},
    "source": [
     "## 複数の変数の間の相関係数をまとめて計算\n",
-    "\n",
-    "```{hint}\n",
-    "[pandas.io.formats.style.Styler.background_gradient](https://pandas.pydata.org/docs/reference/api/pandas.io.formats.style.Styler.background_gradient.html)\n",
-    "```"
+    "[pandas.io.formats.style.Styler.background_gradient](https://pandas.pydata.org/docs/reference/api/pandas.io.formats.style.Styler.background_gradient.html)"
    ]
   },
   {
@@ -208,10 +205,8 @@
     "### 全ての変数間の相関係数を確認する\n",
     "irisデータセットを使って、変数間の相関を見てみます。\n",
     "\n",
-    "```{hint}\n",
     "- [The Iris Dataset](https://scikit-learn.org/stable/auto_examples/datasets/plot_iris_dataset.html)\n",
-    "- [pandas.io.formats.style.Styler.background_gradient](https://pandas.pydata.org/docs/reference/api/pandas.io.formats.style.Styler.background_gradient.html)\n",
-    "```"
+    "- [pandas.io.formats.style.Styler.background_gradient](https://pandas.pydata.org/docs/reference/api/pandas.io.formats.style.Styler.background_gradient.html)"
    ]
   },
   {
@@ -323,10 +318,7 @@
    "source": [
     "ヒートマップだとどこが最も相関が高いか見づらいです。`sepal_length` と相関が高い変数はどれか、棒グラフで確認します。\n",
     "\n",
-    "\n",
-    "```{hint}\n",
-    "[pandas.DataFrame.plot.bar](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.plot.bar.html)\n",
-    "```"
+    "[pandas.DataFrame.plot.bar](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.plot.bar.html)"
    ]
   },
   {
@@ -370,11 +362,9 @@
     "## 相関係数が低い場合\n",
     "相関係数が低い場合のデータ分布を確認し、変数間に関係がある場合でも相関係数が低くなる可能性があることを確認します。\n",
     "\n",
-    "```{hint}\n",
     "[numpy.random.multivariate_normal — NumPy v1.22 Manual](numpy.random.multivariate_normal)\n",
     "\n",
-    "random.multivariate_normal(mean, cov, size=None, check_valid='warn', tol=1e-8)\n",
-    "```"
+    "random.multivariate_normal(mean, cov, size=None, check_valid='warn', tol=1e-8)"
    ]
   },
   {
