--- a/eval/regression/r2.ipynb
+++ b/eval/regression/r2.ipynb
@@ -12,9 +12,7 @@
     "- 一般に高ければ高いほどよい評価指標\n",
     "- 最も良い場合に1になる\n",
     "- ただし、特徴を増やせば増やすほど高くなる傾向にある\n",
-    "- この指標だけを見て「モデルの精度が高い」とは判断できない\n",
-    "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/koy1HmVfjvU\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+    "- この指標だけを見て「モデルの精度が高い」とは判断できない\n"
    ]
   },
   {
@@ -94,9 +92,7 @@
    "metadata": {},
    "source": [
     "### 決定係数を計算\n",
-    "```{hint}\n",
-    "[sklearn.metrics.roc_auc_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.roc_auc_score.html)\n",
-    "```"
+    "[sklearn.metrics.roc_auc_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.roc_auc_score.html)"
    ]
   },
   {
