--- a/timeseries/plot/001_mplfinance.ipynb
+++ b/timeseries/plot/001_mplfinance.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Google　Colaboratory で実行する場合はインストールする\n",
-    "if str(get_ipython()).startswith(\"<google.colab.\"):\n",
+    "if \"google.colab\" in str(get_ipython()):\n",
     "    !pip install japanize_matplotlib\n",
     "    !pip install mplfinance\n",
     "    !pip install pandas_datareader"
