--- a/basic/clustering/k-means2.ipynb
+++ b/basic/clustering/k-means2.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "# Google　Colaboratory で実行する場合はインストールする\n",
-    "if str(get_ipython()).startswith(\"<google.colab.\"):\n",
+    "if \"google.colab\" in str(get_ipython()):\n",
     "    !pip install japanize_matplotlib"
    ]
   },
