--- a/timeseries/shape/001_DTW.ipynb
+++ b/timeseries/shape/001_DTW.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Google　Colaboratory で実行する場合はインストールする\n",
-    "if str(get_ipython()).startswith(\"<google.colab.\"):\n",
+    "if \"google.colab\" in str(get_ipython()):\n",
     "    !pip install fastdtw"
    ]
   },
