[fix] jupyter bookのメモを削除

--- a/basic/regression/linear_regression.ipynb
+++ b/basic/regression/linear_regression.ipynb
@@ -66,11 +66,9 @@
    "id": "e0c96dd7",
    "metadata": {},
    "source": [
-    "```{note}\n",
     "- `japanize_matplotlib` はグラフに日本語を表示するためにインポートしています。\n",
     "- `plt.rc(\"font\", size=20)`などの指定はグラフに表示する文字を大きくするための設定です。\n",
-    "- `np.random.seed(777)`は乱数を固定するために指定しています。\n",
-    "```"
+    "- `np.random.seed(777)`は乱数を固定するために指定しています。"
    ]
   },
   {
@@ -81,9 +79,7 @@
     "## 実験用の回帰データを作成\n",
     "`sklearn.datasets.make_regression` を使ってデータを作成します。\n",
     "\n",
-    "```{hint}\n",
-    "[sklearn.datasets.make_regression](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_regression.html)\n",
-    "```"
+    "[sklearn.datasets.make_regression](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_regression.html)"
    ]
   },
   {
@@ -165,10 +161,7 @@
    "metadata": {},
    "source": [
     "## 最小二乗法で直線を当てはめる\n",
-    "\n",
-    "```{hint}\n",
-    "[sklearn.linear_model.LinearRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html)\n",
-    "```"
+    "[sklearn.linear_model.LinearRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html)"
    ]
   },
   {
