--- a/prep/api/SEC_EDGAR.ipynb
+++ b/prep/api/SEC_EDGAR.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# EDGARのデータを取得する\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/twu1fOw7ZBo\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
+    "\n",
     "\n",
     "EDGAR(Electronic Data Gathering, Analysis, and Retrieval system)とは、米国の証券取引委員会の運営するサイトです。\n",
     "米国の法による法定開示書類が管理されています。ここでは米国企業の財務諸表も管理されています。\n",
@@ -51,9 +51,7 @@
     "## 10-Kに含まれる表を抜き出す\n",
     "pandasの`read_html`を用いることでテーブルをDataFrameの形で抜き出すことができます。\n",
     "\n",
-    "```{hint}\n",
-    "[pandas.read_html](https://pandas.pydata.org/docs/reference/api/pandas.read_html.html)\n",
-    "```"
+    "[pandas.read_html](https://pandas.pydata.org/docs/reference/api/pandas.read_html.html)"
    ]
   },
   {
