--- a/prep/categorical/CountEncoder.ipynb
+++ b/prep/categorical/CountEncoder.ipynb
@@ -120,9 +120,7 @@
    "source": [
     "## CountEncoder\n",
     "\n",
-    "```{hint}\n",
-    "[category_encoders.count.CountEncoder](http://contrib.scikit-learn.org/category_encoders/count.html)\n",
-    "```"
+    "[category_encoders.count.CountEncoder](http://contrib.scikit-learn.org/category_encoders/count.html)"
    ]
   },
   {
