--- a/prep/categorical/Onehot.ipynb
+++ b/prep/categorical/Onehot.ipynb
@@ -115,11 +115,8 @@
    "metadata": {},
    "source": [
     "## OneHotEncoder\n",
-    "\n",
-    "```{hint}\n",
     "- [sklearn.preprocessing.OneHotEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)\n",
-    "- [sklearn.compose.make_column_transformer](https://scikit-learn.org/stable/modules/generated/sklearn.compose.make_column_transformer.html)\n",
-    "```"
+    "- [sklearn.compose.make_column_transformer](https://scikit-learn.org/stable/modules/generated/sklearn.compose.make_column_transformer.html)"
    ]
   },
   {
