--- a/prep/categorical/TargetEncoder.ipynb
+++ b/prep/categorical/TargetEncoder.ipynb
@@ -119,11 +119,8 @@
    "metadata": {},
    "source": [
     "## TargetEncoder\n",
-    "\n",
-    "```{hint}\n",
     "- [category_encoders.target_encoder.TargetEncoder](http://contrib.scikit-learn.org/category_encoders/targetencoder.html)\n",
-    "- [sklearn.compose.make_column_transformer](https://scikit-learn.org/stable/modules/generated/sklearn.compose.make_column_transformer.html)\n",
-    "```"
+    "- [sklearn.compose.make_column_transformer](https://scikit-learn.org/stable/modules/generated/sklearn.compose.make_column_transformer.html)"
    ]
   },
   {
