--- a/prep/data/sql-pandas.ipynb
+++ b/prep/data/sql-pandas.ipynb
@@ -175,9 +175,7 @@
    "metadata": {},
    "source": [
     "## SQLで操作できる形式にする\n",
-    "```{hint}\n",
-    "[pandas.DataFrame.to_sql](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_sql.html)\n",
-    "```"
+    "[pandas.DataFrame.to_sql](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_sql.html)"
    ]
   },
   {
@@ -199,9 +197,7 @@
    "metadata": {},
    "source": [
     "## SQLを実行する\n",
-    "```{hint}\n",
-    "[pandas.read_sql](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "```"
+    "[pandas.read_sql](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)"
    ]
   },
   {
