--- a/prep/table/table2fv.ipynb
+++ b/prep/table/table2fv.ipynb
@@ -117,9 +117,7 @@
     "## make_column_transformer\n",
     "sklearn.compose.make_column_transformerを使用します。指定した複数列に対して、一括で前処理方法を指定します。\n",
     "\n",
-    "```{hint}\n",
-    "[sklearn.compose.make_column_transformer](https://scikit-learn.org/stable/modules/generated/sklearn.compose.make_column_transformer.html)\n",
-    "```"
+    "[sklearn.compose.make_column_transformer](https://scikit-learn.org/stable/modules/generated/sklearn.compose.make_column_transformer.html)"
    ]
   },
   {
