--- a/timeseries/plot/006_financials.ipynb
+++ b/timeseries/plot/006_financials.ipynb
@@ -770,9 +770,7 @@
     "## 変化を可視化する\n",
     "seabornを使ってグラフを作成してみます。\n",
     "\n",
-    "```{hint}\n",
-    "[seaborn.barplot](https://seaborn.pydata.org/generated/seaborn.barplot.html)\n",
-    "```"
+    "[seaborn.barplot](https://seaborn.pydata.org/generated/seaborn.barplot.html)"
    ]
   },
   {
