[format] apply nbqa

--- a/visualize/amounts/japanmap.ipynb
+++ b/visualize/amounts/japanmap.ipynb
@@ -60,6 +60,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from japanmap import picture\n",
+    "\n",
     "np.random.seed(777)\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
@@ -112,19 +113,64 @@
     "    \"#2d1e2f\",\n",
     "]\n",
     "\n",
-    "prefectures = ['北海道', '青森', '岩手', '宮城', '秋田', '山形', '福島', '茨城', '栃木', '群馬', '埼玉', '千葉', '東京', '神奈川', '新潟', '富山', '石川', '福井', '山梨', '長野', '岐阜', '静岡', '愛知', '三重', '滋賀', '京都', '大阪', '兵庫', '奈良', '和歌山', '鳥取', '島根', '岡山', '広島', '山口', '徳島', '香川', '愛媛', '高知', '福岡', '佐賀', '長崎', '熊本', '大分', '宮崎', '鹿児島', '沖縄']\n",
+    "prefectures = [\n",
+    "    \"北海道\",\n",
+    "    \"青森\",\n",
+    "    \"岩手\",\n",
+    "    \"宮城\",\n",
+    "    \"秋田\",\n",
+    "    \"山形\",\n",
+    "    \"福島\",\n",
+    "    \"茨城\",\n",
+    "    \"栃木\",\n",
+    "    \"群馬\",\n",
+    "    \"埼玉\",\n",
+    "    \"千葉\",\n",
+    "    \"東京\",\n",
+    "    \"神奈川\",\n",
+    "    \"新潟\",\n",
+    "    \"富山\",\n",
+    "    \"石川\",\n",
+    "    \"福井\",\n",
+    "    \"山梨\",\n",
+    "    \"長野\",\n",
+    "    \"岐阜\",\n",
+    "    \"静岡\",\n",
+    "    \"愛知\",\n",
+    "    \"三重\",\n",
+    "    \"滋賀\",\n",
+    "    \"京都\",\n",
+    "    \"大阪\",\n",
+    "    \"兵庫\",\n",
+    "    \"奈良\",\n",
+    "    \"和歌山\",\n",
+    "    \"鳥取\",\n",
+    "    \"島根\",\n",
+    "    \"岡山\",\n",
+    "    \"広島\",\n",
+    "    \"山口\",\n",
+    "    \"徳島\",\n",
+    "    \"香川\",\n",
+    "    \"愛媛\",\n",
+    "    \"高知\",\n",
+    "    \"福岡\",\n",
+    "    \"佐賀\",\n",
+    "    \"長崎\",\n",
+    "    \"熊本\",\n",
+    "    \"大分\",\n",
+    "    \"宮崎\",\n",
+    "    \"鹿児島\",\n",
+    "    \"沖縄\",\n",
+    "]\n",
     "\n",
-    "pref_color_dict = {\n",
-    "    prefecture: np.random.choice(colors)\n",
-    "    for prefecture in prefectures\n",
-    "}\n",
+    "pref_color_dict = {prefecture: np.random.choice(colors) for prefecture in prefectures}\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.xticks([])\n",
     "plt.yticks([])\n",
     "plt.imshow(picture(pref_color_dict))\n",
     "\n",
-    "print(f'入力：{pref_color_dict}')"
+    "print(f\"入力：{pref_color_dict}\")"
    ]
   }
  ],
