[update] whisper example

--- a/finance/nlp/srt2jp.ipynb
+++ b/finance/nlp/srt2jp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0d1fe759",
    "metadata": {},
    "outputs": [],
@@ -21,40 +21,20 @@
    "metadata": {},
    "source": [
     "## whisperから作成した字幕ファイルを読み込む\n",
-    "whisperはデフォルトで `.srt`ファイルを書き出します。このファイルの英語の部分を日本語に翻訳します。"
+    "whisperはデフォルトで `.srt`ファイルを書き出します。このファイルの英語の部分を日本語に翻訳します。\n",
+    "翻訳の正しさは保証されておらず、また本コードも動作や出力に関しては一切の責任を負えません。\n",
+    "\n",
+    "- [openai/whisper](https://github.com/openai/whisper)\n",
+    "- 翻訳に使用するモデル：[staka/fugumt-en-ja ](https://staka.jp/wordpress/?p=413)\n",
+    "- [Hugging Face](https://huggingface.co/staka/fugumt-en-ja)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f537512d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1',\n",
-       " '00:00:00,000 --> 00:00:13,240',\n",
-       " \"Hi and welcome to FlexLNG's third quarter highlights.\",\n",
-       " '',\n",
-       " '2',\n",
-       " '00:00:13,240 --> 00:00:18,120',\n",
-       " 'Revenues for the quarter came in at 91 million in line with previous guidance of approximately',\n",
-       " '',\n",
-       " '3',\n",
-       " '00:00:18,120 --> 00:00:19,520',\n",
-       " '90 million.',\n",
-       " '',\n",
-       " '4',\n",
-       " '00:00:19,520 --> 00:00:26,020',\n",
-       " 'Earnings were strong, net income and adjusted net income was 47 and 42 million, translating']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = open(\"FlexLNG_Q3_2022_Key_Takeaways.mp3.srt\", \"r\")\n",
     "lines = [l.replace(\"\\n\", \"\") for l in file.readlines()]\n",
@@ -72,13 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9dc2cf44",
    "metadata": {},
    "outputs": [],
    "source": [
     "def zundamonize(text: str) -> str:\n",
-    "    \"\"\"語尾をそれらしくする\"\"\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "        語尾をそれらしくする\n",
+    "\n",
+    "        Args:\n",
+    "            text (str): 日本語テキスト\n",
+    "\n",
+    "        Returns:\n",
+    "            str: 前処理済みの日本語テキスト\n",
+    "\n",
+    "    \"\"\"\n",
     "    text = text.replace(\"Flex\", \"フレックス\")\n",
     "\n",
     "    if text.endswith(\"ありがとうございました\"):\n",
@@ -131,110 +121,17 @@
    "source": [
     "## 翻訳したテキストを出力する\n",
     "字幕用のフォーマット(`.srt`)とテキストファイルの両方を出力します。\n",
-    "途中、タイムスタンプをいろいろ書き換えているのは字幕のタイミングを調整するためです。"
+    "途中、タイムスタンプをいろいろ書き換えているのは字幕のタイミングを調整するためです。また、ファイル一行目に改行を入れるとAdobe Premire Pro等で読み取りに失敗するので注意してください。\n",
+    "\n",
+    "参考文献：[SubRip](https://en.wikipedia.org/wiki/SubRip)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ef3455e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "1\n",
-      "00:00:00,000 --> 00:00:13,240\n",
-      "フレックスLNGの第3四半期ハイライトへようこそなのだ。\n",
-      "\n",
-      "2\n",
-      "00:00:13,240 --> 00:00:19,520\n",
-      "この四半期の売上は9100万ドルで、前回のガイダンスでは約9000万ドルだったのだ。\n",
-      "\n",
-      "3\n",
-      "00:00:19,520 --> 00:00:33,480\n",
-      "利益は好調で、純利益と調整済み純利益は47と4200万ドルで、1株当たり利益と調整済み1株当たり利益はそれぞれ88セントと79セントだったのだ。\n",
-      "\n",
-      "4\n",
-      "00:00:33,480 --> 00:00:41,520\n",
-      "四半期中の貨物市場は急成長し、これは短期と長期の両方にプラスの影響を与えたのだ。\n",
-      "\n",
-      "5\n",
-      "00:00:41,520 --> 00:00:45,100\n",
-      "この四半期には3隻の船が新造船のチャーターを開始したのだ。\n",
-      "\n",
-      "6\n",
-      "00:00:45,100 --> 00:00:57,720\n",
-      "6月には、フレックス Enterpriseとフレックス Amberの両方の7年間のチャーターを発表し、これらの船は、短期契約の代わりに、7月にこれらの新しい長期チャーターを開始したのだ。\n",
-      "\n",
-      "7\n",
-      "00:00:57,720 --> 00:01:07,520\n",
-      "また、フレックス Auroraは、Chenierとの契約の下で、最終5番目の船として、四半期の終わりにChenierに配信されたのだ。\n",
-      "\n",
-      "8\n",
-      "00:01:07,520 --> 00:01:11,840\n",
-      "四半期中、当社のCFOは資金調達に忙しかったのだ。\n",
-      "\n",
-      "9\n",
-      "00:01:11,840 --> 00:01:28,740\n",
-      "私たちのバランスシート最適化プログラムフェーズ2では、追加の1億ドルの現金を調達する目標がありました。この6億3000万の資金を4隻の船舶に再融資することで、すでに1億1000万の現金リリースを確保しているのだ。\n",
-      "\n",
-      "10\n",
-      "00:01:28,740 --> 00:01:43,120\n",
-      "また、新たに3隻の船舶をリファイナンスし、バランスシート最適化プログラムの目標を合計3億に引き上げたのだ。\n",
-      "\n",
-      "11\n",
-      "00:01:43,120 --> 00:01:46,800\n",
-      "フェーズ1では1億3700万件をリリースしました\n",
-      "\n",
-      "12\n",
-      "00:01:46,800 --> 00:02:00,400\n",
-      "私たちは今日、110をリリースすることを発表したので、我々はこのプログラムのために合計で3億の現金を最小に調達すると思うので、我々はまだ再融資する3つの船を持っているのだ。\n",
-      "\n",
-      "13\n",
-      "00:02:00,400 --> 00:02:04,000\n",
-      "次の四半期は、やや良い数字が期待できるのだ。\n",
-      "\n",
-      "14\n",
-      "00:02:04,000 --> 00:02:20,480\n",
-      "これはフレックス Artemisが主導するものです。フレックス Artemisは、スポットマーケットレートに結びついた可変的な高い契約を結んでいるため、第4四半期の収益は9500万から9800万で、以前のガイダンスである9000万から1億と一致しているのだ。\n",
-      "\n",
-      "15\n",
-      "00:02:20,480 --> 00:02:26,880\n",
-      "来年は100%の契約カバレッジがあり、2024年には最低91%のカバレッジがあるのだ。\n",
-      "\n",
-      "16\n",
-      "00:02:26,880 --> 00:02:41,320\n",
-      "2024年にオープンする可能性のある船が2隻あります。チャーターには拡張オプションがあるので、ポートフォリオの最初の完全にオープンな船は2026年半ばなのだ。\n",
-      "\n",
-      "17\n",
-      "00:02:41,320 --> 00:02:55,720\n",
-      "強い契約範囲または非常に健全な財政状態にもかかわらず、健全な収益それゆえ、取締役会は1株あたり75セントの通常の四半期配当を宣言することを再び決定したのだ。\n",
-      "\n",
-      "18\n",
-      "00:02:55,720 --> 00:03:05,160\n",
-      "現在までに、1株当たり2.75ドルを宣言しました。これは、1株当たり利益2.76ドルと一致しているのだ。\n",
-      "\n",
-      "19\n",
-      "00:03:05,160 --> 00:03:09,840\n",
-      "これには、前四半期に支払われた50セントの特別配当が含まれるのだ。\n",
-      "\n",
-      "20\n",
-      "00:03:09,840 --> 00:03:22,120\n",
-      "昨年第4四半期の配当を含む場合、最後の4四半期に3.5ドルを支払ったため、投資家は今日の株価から約10%の利回りを得ることができるのだ。\n",
-      "\n",
-      "21\n",
-      "00:03:22,120 --> 00:03:36,880\n",
-      "だから、ヨーロッパ時間3時、米国時間9時に私たちの完全なビデオウェブキャストに参加してください、そして私はあなたが市場と会社全般に関するいくつかの詳細を与えるようにあなたが参加できることを願っているのだ。\n",
-      "\n",
-      "22\n",
-      "00:03:36,880 --> 00:03:43,880\n",
-      "ありがとうなのだ。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cnt = 0\n",
     "result = []\n",
