--- a/finance/misc/edinet.ipynb
+++ b/finance/misc/edinet.ipynb
@@ -345,13 +345,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1307</th>\n",
-       "      <td>1308</td>\n",
-       "      <td>S100STH6</td>\n",
-       "      <td>E04236</td>\n",
-       "      <td>91040</td>\n",
-       "      <td>4010401082896</td>\n",
-       "      <td>株式会社商船三井</td>\n",
+       "      <th>991</th>\n",
+       "      <td>992</td>\n",
+       "      <td>S100SP9O</td>\n",
+       "      <td>E04243</td>\n",
+       "      <td>91190</td>\n",
+       "      <td>6010001008655</td>\n",
+       "      <td>飯野海運株式会社</td>\n",
+       "      <td>None</td>\n",
+       "      <td>010</td>\n",
+       "      <td>043000</td>\n",
+       "      <td>140</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1223</th>\n",
+       "      <td>1224</td>\n",
+       "      <td>S100SQG6</td>\n",
+       "      <td>E04239</td>\n",
+       "      <td>91100</td>\n",
+       "      <td>3010001095003</td>\n",
+       "      <td>ＮＳユナイテッド海運株式会社</td>\n",
        "      <td>None</td>\n",
        "      <td>010</td>\n",
        "      <td>043000</td>\n",
@@ -370,23 +394,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 29 columns</p>\n",
+       "<p>2 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      seqNumber     docID edinetCode secCode            JCN filerName  \\\n",
-       "1307       1308  S100STH6     E04236   91040  4010401082896  株式会社商船三井   \n",
+       "      seqNumber     docID edinetCode secCode            JCN       filerName  \\\n",
+       "991         992  S100SP9O     E04243   91190  6010001008655        飯野海運株式会社   \n",
+       "1223       1224  S100SQG6     E04239   91100  3010001095003  ＮＳユナイテッド海運株式会社   \n",
        "\n",
        "     fundCode ordinanceCode formCode docTypeCode  ... opeDateTime  \\\n",
-       "1307     None           010   043000         140  ...        None   \n",
+       "991      None           010   043000         140  ...        None   \n",
+       "1223     None           010   043000         140  ...        None   \n",
        "\n",
        "     withdrawalStatus docInfoEditStatus disclosureStatus xbrlFlag pdfFlag  \\\n",
-       "1307                0                 0                0        1       1   \n",
+       "991                 0                 0                0        1       1   \n",
+       "1223                0                 0                0        1       1   \n",
        "\n",
        "     attachDocFlag englishDocFlag csvFlag legalStatus  \n",
-       "1307             0              0       1           1  \n",
+       "991              0              0       1           1  \n",
+       "1223             0              0       1           1  \n",
        "\n",
-       "[1 rows x 29 columns]"
+       "[2 rows x 29 columns]"
       ]
      },
      "execution_count": 4,
@@ -395,7 +423,7 @@
     }
    ],
    "source": [
-    "sd_df[sd_df.filerName.str.contains(\"商船三井\")]"
+    "sd_df[sd_df.filerName.str.contains(\"海運\")]"
    ]
   },
   {
