[update] add and update notebook

--- a/finance/misc/edinet-textmining-1.ipynb
+++ b/finance/misc/edinet-textmining-1.ipynb
@@ -34,11 +34,11 @@
     "            \"EDINET_API_KEY\"\n",
     "        ),  # v1を使用する場合は不要, 2024年３月29日（金）まで利用可能\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    docs_submitted_json = requests.get(\n",
     "        f\"{API_ENDPOINT}/documents.json\", request_params\n",
     "    ).json()\n",
-    "    \n",
+    "\n",
     "    sd_df = pd.DataFrame(docs_submitted_json[\"results\"])\n",
     "    sd_df = sd_df[sd_df[\"docDescription\"].str.contains(\"有価証券報告書\", na=False)]\n",
     "    sd_dfs.append(sd_df)\n",
@@ -234,7 +234,7 @@
     "def save_csv(docID, doc_type=1):\n",
     "    print(f\"{docID}のデータを取得中\")\n",
     "    time.sleep(5)\n",
-    "    \n",
+    "\n",
     "    r = requests.get(\n",
     "        f\"{API_ENDPOINT}/documents/{docID}\",\n",
     "        {\n",
@@ -246,17 +246,18 @@
     "    if r is None:\n",
     "        print(\"データの取得に失敗しました。csvFlag==1かどうか確認してください。\")\n",
     "    else:\n",
-    "        os.makedirs(f'{docID}', exist_ok=True)\n",
-    "        temp_zip = 'uuid_A345E318_0C3A_4D32_B55B_CC1A84F3A7B2.zip'\n",
-    "        \n",
-    "        with open(temp_zip, 'wb') as f:\n",
+    "        os.makedirs(f\"{docID}\", exist_ok=True)\n",
+    "        temp_zip = \"uuid_A345E318_0C3A_4D32_B55B_CC1A84F3A7B2.zip\"\n",
+    "\n",
+    "        with open(temp_zip, \"wb\") as f:\n",
     "            for chunk in r.iter_content(chunk_size=1024):\n",
     "                f.write(chunk)\n",
-    "    \n",
+    "\n",
     "        with zipfile.ZipFile(temp_zip) as z:\n",
-    "            z.extractall(f'{docID}')\n",
-    "    \n",
+    "            z.extractall(f\"{docID}\")\n",
+    "\n",
     "        os.remove(temp_zip)\n",
+    "\n",
     "\n",
     "save_csv(\"S100QZLI\")"
    ]
@@ -285,14 +286,17 @@
     "from edinet_xbrl.edinet_xbrl_parser import EdinetXbrlParser\n",
     "\n",
     "parser = EdinetXbrlParser()\n",
-    "parsed_xbrl = parser.parse_file(r\"S100QZLI\\XBRL\\PublicDoc\\jpcrp030000-asr-001_E04236-000_2023-03-31_01_2023-06-20.xbrl\")\n",
+    "parsed_xbrl = parser.parse_file(\n",
+    "    r\"S100QZLI\\XBRL\\PublicDoc\\jpcrp030000-asr-001_E04236-000_2023-03-31_01_2023-06-20.xbrl\"\n",
+    ")\n",
     "\n",
     "key = \"jpcrp_cor:DividendPaidPerShareSummaryOfBusinessResults\"\n",
-    "context_ref = 'CurrentYearDuration_NonConsolidatedMember'\n",
+    "context_ref = \"CurrentYearDuration_NonConsolidatedMember\"\n",
     "summary_of_business_info = parsed_xbrl.get_data_by_context_ref(key, context_ref)\n",
     "summary_of_business = summary_of_business_info.get_value()\n",
     "\n",
     "from IPython.display import HTML\n",
+    "\n",
     "HTML(summary_of_business)"
    ]
   },
@@ -323,20 +327,20 @@
    ],
    "source": [
     "list_jpcrp_cor_tag = [\n",
-    "        'NetSalesSummaryOfBusinessResults',                     # 売上高\n",
-    "        'OrdinaryIncomeLossSummaryOfBusinessResults',           # 経常利益\n",
-    "        'NetIncomeLossSummaryOfBusinessResults',                # 当期純利益\n",
-    "        'NetAssetsSummaryOfBusinessResults',                    # 純資産額\n",
-    "        'TotalAssetsSummaryOfBusinessResults',                  # 総資産額\n",
-    "        'NetAssetsPerShareSummaryOfBusinessResults',            # 1株当たり純資産額\n",
-    "        'DividendPaidPerShareSummaryOfBusinessResults',         # 1株当たり配当額\n",
-    "        'InterimDividendPaidPerShareSummaryOfBusinessResults',  # 1株当たり中間配当額\n",
-    "        'BasicEarningsLossPerShareSummaryOfBusinessResults',    # 1株当たり当期純利益\n",
-    "        'EquityToAssetRatioSummaryOfBusinessResults',           # 自己資本比率\n",
-    "        'RateOfReturnOnEquitySummaryOfBusinessResults',         # 自己資本利益率\n",
-    "        'PriceEarningsRatioSummaryOfBusinessResults',           # 株価収益率\n",
-    "        'PayoutRatioSummaryOfBusinessResults',                  # 配当性向\n",
-    "        'TotalShareholderReturn'                                # 株主総利回り\n",
+    "    \"NetSalesSummaryOfBusinessResults\",  # 売上高\n",
+    "    \"OrdinaryIncomeLossSummaryOfBusinessResults\",  # 経常利益\n",
+    "    \"NetIncomeLossSummaryOfBusinessResults\",  # 当期純利益\n",
+    "    \"NetAssetsSummaryOfBusinessResults\",  # 純資産額\n",
+    "    \"TotalAssetsSummaryOfBusinessResults\",  # 総資産額\n",
+    "    \"NetAssetsPerShareSummaryOfBusinessResults\",  # 1株当たり純資産額\n",
+    "    \"DividendPaidPerShareSummaryOfBusinessResults\",  # 1株当たり配当額\n",
+    "    \"InterimDividendPaidPerShareSummaryOfBusinessResults\",  # 1株当たり中間配当額\n",
+    "    \"BasicEarningsLossPerShareSummaryOfBusinessResults\",  # 1株当たり当期純利益\n",
+    "    \"EquityToAssetRatioSummaryOfBusinessResults\",  # 自己資本比率\n",
+    "    \"RateOfReturnOnEquitySummaryOfBusinessResults\",  # 自己資本利益率\n",
+    "    \"PriceEarningsRatioSummaryOfBusinessResults\",  # 株価収益率\n",
+    "    \"PayoutRatioSummaryOfBusinessResults\",  # 配当性向\n",
+    "    \"TotalShareholderReturn\",  # 株主総利回り\n",
     "]"
    ]
   },
