--- a/timeseries/model/006-Autocovariance-Autocorr.ipynb
+++ b/timeseries/model/006-Autocovariance-Autocorr.ipynb
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "data_sin = [0.1*(i%10) for i in range(500)]\n",
+    "data_sin = [0.1 * (i % 10) for i in range(500)]\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(data_sin)\n",
@@ -101,9 +101,7 @@
    ],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
-    "plt.acorr(np.array(data_sin) - np.mean(data_sin), \n",
-    "                detrend=detrend_none, \n",
-    "                maxlags=10)\n",
+    "plt.acorr(np.array(data_sin) - np.mean(data_sin), detrend=detrend_none, maxlags=10)\n",
     "plt.show()"
    ]
   },
@@ -127,7 +125,7 @@
     }
    ],
    "source": [
-    "plot_acf(data_sin, lags=40, alpha=.05)\n",
+    "plot_acf(data_sin, lags=40, alpha=0.05)\n",
     "plt.show()"
    ]
   },
@@ -216,7 +214,7 @@
     }
    ],
    "source": [
-    "plot_acf(data_ar, lags=40, alpha=.05)\n",
+    "plot_acf(data_ar, lags=40, alpha=0.05)\n",
     "plt.show()"
    ]
   }
