--- a/timeseries/model/007-pacf.ipynb
+++ b/timeseries/model/007-pacf.ipynb
@@ -125,7 +125,7 @@
    "source": [
     "sm.graphics.tsa.plot_acf(data_ar, lags=40)\n",
     "plt.title(\"自己相関\")\n",
-    "plt.xlabel('ラグ')\n",
+    "plt.xlabel(\"ラグ\")\n",
     "plt.show()"
    ]
   },
@@ -157,9 +157,9 @@
     }
    ],
    "source": [
-    "sm.graphics.tsa.plot_pacf(data_ar, lags=40, method='ywm')\n",
-    "plt.title('偏自己相関')\n",
-    "plt.xlabel('ラグ')\n",
+    "sm.graphics.tsa.plot_pacf(data_ar, lags=40, method=\"ywm\")\n",
+    "plt.title(\"偏自己相関\")\n",
+    "plt.xlabel(\"ラグ\")\n",
     "plt.show()"
    ]
   }
